--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,26 @@
 body {
     font-family: sans-serif;
-    background-color: black;
-    color: white;
+	/* Using baseline-css for background. https://gist.github.com/rachelbaker/1322975 */
+    background-color: #f1f2f3;
+    background-image: 
+      -webkit-linear-gradient(0deg, transparent .05em, rgba(0,0,0,.05) .05em, rgba(0,0,0,.05) .125000em, transparent .125000em),
+      -webkit-linear-gradient(rgba(0,0,0,.05) .062500em, transparent .062500em);
+    background-image:
+      -moz-linear-gradient(0deg, transparent .05em, rgba(0,0,0,.05) .05em, rgba(0,0,0,.05) .125000em, transparent .125000em),
+      -moz-linear-gradient(rgba(0,0,0,.05) .062500em, transparent .062500em);
+    background-image:
+      -ms-linear-gradient(0deg, transparent .05em, rgba(0,0,0,.05) .05em, rgba(0,0,0,.05) .125000em, transparent .125000em),
+      -ms-linear-gradient(rgba(0,0,0,.05) .062500em, transparent .062500em);
+    background-image:
+      -o-linear-gradient(0deg, transparent .05em, rgba(0,0,0,.05) .05em, rgba(0,0,0,.05) .125000em, transparent .125000em),
+      -o-linear-gradient(rgba(0,0,0,.05) .062500em, transparent .062500em);
+    background-image:
+      linear-gradient(0deg, transparent .05em, rgba(0,0,0,.05) .05em, rgba(0,0,0,.05) .125000em, transparent .125000em),
+      inear-gradient(rgba(0,0,0,.05) .062500em, transparent .062500em);
+    background-size: 3.1em 2.90em;
+	background-position: 1.3em 0.2em;
+	cursor:url('../img/pencil.gif'), pointer;
+	zoom: 200%;
 }
 
 h1 {
@@ -9,7 +28,7 @@ h1 {
 }
 
 #board td {
-    width: 20px;
+    width: 21px;
     height: 10px;
     text-align: center;
 }
@@ -34,3 +53,5 @@ h1 {
 #board tr:nth-child(even) td:nth-child(odd):hover:not(.connected) {
     background-color: red;
 }
+
+.wait, .wait * { cursor: wait !important; }
